add html tags and new css files

--- a/index.html
+++ b/index.html
@@ -1,2 +1,33 @@
-<b>we are in the index.html file</b>
-<h2>satauri</h2>
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" type="text/css" href="css/reset.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<title>title</title>
+</head>
+<body>
+	<section>
+    <div class="wraper">
+	    <img class="image" src="https://i.pinimg.com/474x/4c/99/89/4c9989081366160b41cf9deeb56eb8f9--stuff-to-buy-larger.jpg" alt="image">
+	    <div class="text-wraper">
+	    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+	    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+	    quis. 
+	    </p>
+	    
+	    </div>
+	    <div class="clear"></div>
+    </div>
+</section>
+<section>
+	<p> ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+	proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+</section>
+</body>
+</html>
